--- a/frontend/src/components/ProfilePage/ProfilePage.css
+++ b/frontend/src/components/ProfilePage/ProfilePage.css
@@ -38,18 +38,17 @@
   align-items: flex-start;
 }
 .profile-image {
-  cursor: pointer;
   width: 285px;
   height: 285px;
   box-shadow: 0px 0px 4px rgba(75, 75, 75, 0.247);
   mix-blend-mode: multiply;
+  object-fit: cover;
 }
 .image-wrapper:hover {
   background-color: rgba(0, 0, 0, 0.37);
   background-blend-mode: multiply;
   z-index: 100;
   height: 285px;
-  cursor: pointer;
 }
 .image-wrapper:hover .image-info {
   display: flex;
@@ -70,6 +69,7 @@
   color: white;
   padding: 1rem;
   font-weight: bold;
+
 }
 .profile-image-heart {
   width: 32px;
@@ -88,6 +88,7 @@
   margin-top: 1rem;
   border-top: 1px solid rgba(156, 156, 156, 0.123);
   padding-top: 2.5rem;
+
 }
 @media screen and (max-width: 800px) {
   .image-container {
